// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldDetailsComponent renders correctly 1`] = `
<div>
  <div>
    <span
      class="sc-kpDqfm sc-dAlyuH hQmucp iJUbAB"
    >
      test type prefix
    </span>
    <span
      class="sc-kpDqfm sc-jlZhew hQmucp dKmyvV"
    >
      array
    </span>
    <span
      class="sc-kpDqfm sc-cwHptR hQmucp dlJmJy"
    >
       (test title) 
    </span>
    <span>
       
      <span
        class="sc-kpDqfm sc-gFqAkR hQmucp kxZcxR"
      >
          
      </span>
    </span>
  </div>
  <div>
    <span
      class="sc-kpDqfm hQmucp"
    >
       Default: 
    </span>
     
    <span
      class="sc-kpDqfm sc-eldPxv hQmucp eivFDv"
    >
      []
    </span>
  </div>
   
  <div>
    <span
      class="sc-kpDqfm hQmucp"
    >
       Example: 
    </span>
     
    <span
      class="sc-kpDqfm sc-eldPxv hQmucp eivFDv"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-fhzFiK sc-bbSZdi kQJSMe gNfGjX"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;

exports[`FieldDetailsComponent renders correctly when default value is object in request body 1`] = `
<div>
  <div>
    <span
      class="sc-kpDqfm sc-dAlyuH hQmucp iJUbAB"
    />
    <span
      class="sc-kpDqfm sc-jlZhew hQmucp dKmyvV"
    >
      object
    </span>
    <span
      class="sc-kpDqfm sc-cwHptR hQmucp dlJmJy"
    >
       (test title) 
    </span>
    <span>
       
      <span
        class="sc-kpDqfm sc-gFqAkR hQmucp kxZcxR"
      >
          
      </span>
    </span>
  </div>
  <div>
    <span
      class="sc-kpDqfm hQmucp"
    >
       Default: 
    </span>
     
    <span
      class="sc-kpDqfm sc-eldPxv hQmucp eivFDv"
    >
      {"properties":{}}
    </span>
  </div>
   
  <div>
    <span
      class="sc-kpDqfm hQmucp"
    >
       Example: 
    </span>
     
    <span
      class="sc-kpDqfm sc-eldPxv hQmucp eivFDv"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-fhzFiK sc-bbSZdi kQJSMe gNfGjX"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;

exports[`FieldDetailsComponent renders correctly when field items have string type and pattern 1`] = `
<div>
  <div>
    <span
      class="sc-kpDqfm sc-dAlyuH hQmucp iJUbAB"
    />
    <span
      class="sc-kpDqfm sc-jlZhew hQmucp dKmyvV"
    >
      Array of strings
    </span>
    <span
      class="sc-kpDqfm sc-cwHptR hQmucp dlJmJy"
    >
       (test title) 
    </span>
    <span>
       
      <span
        class="sc-kpDqfm sc-gFqAkR hQmucp kxZcxR"
      >
          
      </span>
    </span>
    <span
      class="sc-kpDqfm sc-dAlyuH sc-dNsVcS hQmucp iJUbAB hXHncj"
    >
      [
      <span
        class="sc-kpDqfm sc-eDPEul hQmucp drwcsG"
      >
        ^see regex[0-9]$
      </span>
      ]
    </span>
  </div>
   
  <div>
    <span
      class="sc-kpDqfm hQmucp"
    >
       Example: 
    </span>
     
    <span
      class="sc-kpDqfm sc-eldPxv hQmucp eivFDv"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-fhzFiK sc-bbSZdi kQJSMe gNfGjX"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;
